@@ -2,6 +2,8 @@
 //––––––––––––––––––––––––––––––––––––––––––––––––––
 
 %h {
+    font-family: $header-font-family;
+    
     small {
         font-size: 65%;
         line-height: 1;
