@@ -4,6 +4,7 @@ Changelog
 1.8.1 - IN DEVELOPMENT
 
 * Reworked pre and code elements to work as they should
+* Added ability to change the header font family
 
 1.8.0 - 27-Jan-2018
 ~~~~~~~~~~~~~~~~~~~
